--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = 'https://mintbox.foreverland.xyz'
-VUE_APP_CONTRACT_ADDR = '0x062b8660Be5cFAb089a40E729f15100Ab528414D'
+VUE_APP_CONTRACT_ADDR = ''
