--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = 'https://mintbox.foreverland.xyz'
-VUE_APP_CONTRACT_ADDR = '0xbc3272c9165a62c66c9d86b7D8034276C001E58f'
+VUE_APP_CONTRACT_ADDR = ''
