--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.6",
     "ethers": "^5.5.3",
     "js-cookie": "^3.0.1",
+    "metan1": "^0.1.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.0.0",
@@ -36,6 +37,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "ethereumjs-util": "^7.1.3",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
@@ -46,7 +48,6 @@
     "typescript": "^4.5.4",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-property-decorator": "^9.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "ethereumjs-util": "^7.1.3"
+    "vue-template-compiler": "^2.6.11"
   }
 }
