--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = 'https://mintbox.foreverland.xyz'
 
-VUE_APP_CONTRACT_ADDR = '0x429c1b35d5eEB029c6293Ae18a65cb72cb1A441f'
+VUE_APP_CONTRACT_ADDR = ''
